--- a/examples/cdn/index.html
+++ b/examples/cdn/index.html
@@ -7,7 +7,9 @@
   <title>CDN Example</title>
 </head>
 <body>
-  <div id='container'></div>
+  <div id='container'>
+    CDN Example
+  </div>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   <script src="./node_modules/chata-ai/dist/bundle.umd.js"></script>
