--- a/examples/cdn/index.html
+++ b/examples/cdn/index.html
@@ -14,10 +14,10 @@
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   <script src="./node_modules/chata-ai/dist/chata.umd.js"></script>
   <script>
-    const { ChatDrawer } = window.ChataAI
+    const { DataMessenger } = window.ChataAI
     const container = document.getElementById('container')
     ReactDOM.render(
-      React.createElement(ChatDrawer),
+      React.createElement(DataMessenger),
       container
     )
   </script>
