add icons to dashboard tile input boxes

--- a/examples/cra/public/index.html
+++ b/examples/cra/public/index.html
@@ -19,11 +19,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- <link rel="stylesheet" type="text/css" href="https://ucarecdn.com/55efbaf2-93e5-4d47-87bb-98031bc70cad/autoqlstyles.css">
+    <script src="https://ucarecdn.com/f475fc7c-f367-4d71-b808-b2f863acb8d2/autoqlmin.js"></script> -->
+    <title>AutoQL</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div style="height: 100%; overflow: auto;" id="root"></div>
+    <!-- <div id="data-messenger-container"></div> -->
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
