fix multiple scroll and style bugs add favicon and new title to app metadata

--- a/examples/cra/public/index.html
+++ b/examples/cra/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -22,7 +22,7 @@
 
     <!-- <link rel="stylesheet" type="text/css" href="https://ucarecdn.com/55efbaf2-93e5-4d47-87bb-98031bc70cad/autoqlstyles.css">
     <script src="https://ucarecdn.com/f475fc7c-f367-4d71-b808-b2f863acb8d2/autoqlmin.js"></script> -->
-    <title>AutoQL</title>
+    <title>AutoQL Test Page</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
